<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ProyectoAndroid.MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/a_adir"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/borrar"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/guardar"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/buscar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />

</menu>