<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPrestamoFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="106dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/lt_addPrestamo_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/item"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/lt_addPersona_Persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="Persona"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/lt_addPersona_tv_Fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/fecha"
                android:inputType="none"
                android:textSize="20sp"
                android:ems="10"/>

            <Button
                android:id="@+id/lt_addPersona_bt_GetFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_date" />

        </LinearLayout>

        <Button
            android:id="@+id/lt_addPersona_bt_Guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="40dp"
            android:text="@string/guardar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>